# server.js
@@ -7,6 +7,8 @@ const MongoClient = require('mongodb').MongoClient;
 const mongodb = require('./db/connect');
 const motoBikesRoutes = require('./routes/motoBikes');
 const carsRoutes = require('./routes/cars');
+const dealerShipsRoutes = require('./routes/dealerShips');
+const usersRoutes = require('./routes/users');
 const Routes = require('./routes/index');
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./swagger.json'); 
@@ -14,6 +16,10 @@ const session = require('express-session');
 const cors = require('cors');
     
 const port = 3000
+
+app.use(express.json());
+app.use(express.urlencoded({ extended: true }));
+
 
 // Required for secure cookies on Render
 app.set('trust proxy', 1);
@@ -25,20 +31,24 @@ app
   resave: false,
   saveUninitialized: true,
   cookie: {
-    secure: process.env.NODE_ENV === 'production', // true in production
+    secure: false,
+    //secure: process.env.NODE_ENV === 'production', // true in production
     httpOnly: true,
-    sameSite: 'none'
+    sameSite: 'lax',
+    //sameSite: 'none'  // true in production
   }
   }))
   
   .use(cors({
-  origin: 'https://motocarhub.onrender.com',
+  origin: ['http://127.0.0.1:3000', 'http://localhost:3000'],
   credentials: true,
   methods: ['GET', 'POST', 'PUT', 'PATCH', 'DELETE']
   }))
   .use(express.static(path.join(__dirname, 'public')))
   .use('/motoBikes', motoBikesRoutes)
   .use('/cars', carsRoutes)
+  .use('/dealerShips', dealerShipsRoutes)
+  .use('/users', usersRoutes)
   .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile, {
     swaggerOptions: {
       withCredentials: true, // critical to include session cookie
